--- a/store/blocks/menu-items.jsonc
+++ b/store/blocks/menu-items.jsonc
@@ -26,7 +26,7 @@
       "highlight": true,
       "itemProps": {
         "categoryId": 3, 
-        "text": "Electronics Teste"
+        "text": "Electronics Teste1"
       }
     }
   },
