--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -64,7 +64,7 @@
     }
   },
 
-  "sku-select": {
+  "sku-selector": {
     "props": { 
       "initialSelection": "empty",
       "showVariationsLabels": true,
