--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -67,7 +67,7 @@
   "sku-selector": {
     "props": { 
       "initialSelection": "empty",
-      "showVariationsLabels": true,
+      "showValueNameForImageVariation": true,
       "showVariationsErrorMessage": true
     }
   }
