--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -20,7 +20,8 @@
       "order-by.v2",
       "search-fetch-previous",
       "search-content",
-      "filter-navigator.v3"
+      "filter-navigator.v3",
+      "search-fetch-more"
     ]
   }
  }
