--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,8 @@
       "store.custom#about-us": {
         "blocks": [
                 "flex-layout.row#about-us",
-                "tab-layout"
+                "tab-layout",
+                "tab-layout#home"
             ]
       },
       "flex-layout.row#about-us": {
