--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -3,7 +3,8 @@
         "blocks": [
                 "flex-layout.row#about-us",
                 "tab-layout",
-                "tab-layout#home"
+                "tab-layout#home",
+                "iframe"
             ]
       },
       "flex-layout.row#about-us": {
@@ -107,11 +108,21 @@
       },
       "rich-text#home2": {
         "props": {
-          "text": "Electronics",
+          "text": "Instagram",
           "textPosition": "CENTER",
           "font": "t-heading-3"
         }
+      },
+
+      "iframe": {
+        "props": {
+          "src": " https://www.instagram.com/p/B37Zfd6FobU/embed",
+          "width": 800,
+          "height": 1000
+        }
       }
+
+
 
 
 
