--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -67,7 +67,7 @@
       "tab-list.item#home2": {
         "props": {
           "tabId": "electronics",
-          "label": "Electronics"
+          "label": "Instagram"
         }
       },
 
@@ -91,7 +91,7 @@
       },
       "tab-content.item#home2": {
         "children": [
-          "rich-text#home2"
+          "iframe"
         ],
         "props": {
           "tabId": "electronics"
