--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -116,9 +116,9 @@
 
       "iframe": {
         "props": {
-          "src": " https://www.instagram.com/p/B37Zfd6FobU/embed",
-          "width": "800px",
-          "height": "1000px"
+          "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+          "width": 800,
+          "height": 1000
         }
       }
 
